Added functionality for opening app market page.
Now people can open an app detail page by calling Utilities.instance().openApp() function.